<?xml version="1.0"?>
<package>
  <name>swiftnav_ros</name>
  <version>0.0.1</version>
  <description>Swift Navigation ROS Driver for SBP Devices</description>

  <maintainer email="jkretzmer@swiftnav.com">Josh Kretzmer</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/yei_tss_usb</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>
  <author email="cbjamo@gmail.com">Caleb Jamison</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libswiftnav</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>libswiftnav</run_depend>
</package>
